# IterativeEikonal

./: .gitignore  LICENSE  README.md  iterativeeikonal.ipynb  minenv.yml  pyproject.toml  setup.py  test_eikivp.ipynb
backend/: derivativesR2.py
eikivp/: __init__.py  cleanarrays.py  costfunction.py  orientationscore.py  utils.py  visualisations.py
eikivp/R2/: __init__.py  backtracking.py  costfunction.py  derivatives.py  distancemap.py  interpolate.py  interpolatetemp.py  metric.py  utils.py  vesselness.py
eikivp/SE2/: __init__.py  backtracking.py  costfunction.py  derivatives.py  distancemap.py  interpolate.py  metric.py  utils.py  vesselness.py
eikivp/SE2/Riemannian/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
eikivp/SE2/plus/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
eikivp/SE2/subRiemannian/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
eikivp/SO3/: __init__.py  costfunction.py  derivatives.py  utils.py
eikivp/SO3/Riemannian/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
eikivp/SO3/plus/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
eikivp/SO3/subRiemannian/: __init__.py  backtracking.py  distancemap.py  interpolate.py  metric.py
iterativeeikonal/: __init__.py  cleanarrays.py  costfunctions.py  derivativesR2.py  derivativesSE2.py  interpolateR2.py  interpolateSE2.py  solvers.py
iterativeeikonal/R2/: derivativestemp.py  vesselness.py
iterativeeikonal/SE2/: derivatives.py  derivativestemp.py
