[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eikivp"
dynamic = ["version"]
description = "Solve Eikonal PDE with an IVP approach"
authors = [
    {name = "F.M. Sherry", email = "f.m.sherry@tue.nl"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Private :: Do Not Upload",
]
requires-python = ">= 3.10"
dependencies = [
    "diplib >= 3.4",
    "numpy >= 1.26",
    "scipy >= 1.12",
    "taichi == 1.6.0",
    "tqdm >= 4"
]
